[package]
name = "quicksilver"
description = "A simple game framework for 2D games in pure Rust"
version = "0.3.11"
authors = ["Ryan Goldstein <ryanisaacg@gmail.com>"]
categories = ["game-engines"]
homepage = "https://ryanisaacg.github.io/quicksilver"
keywords = ["game", "audio", "graphics", "gamedev"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ryanisaacg/quicksilver"
exclude = ["docs/*"]
edition = "2018"

[features]
default = ["collisions", "complex_shapes", "immi_ui", "fonts", "gamepads", "saving", "sounds"]

collisions = ["nalgebra", "ncollide2d"]
complex_shapes = ["lyon"]
fonts = ["rusttype"]
gamepads = ["gilrs"]
immi_ui = ["immi", "fonts"]
saving = ["dirs", "serde_json"]
sounds = ["rodio"]

[badges]

travis-ci = { repository = "ryanisaacg/quicksilver", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
futures = "0.1"
gilrs = { version = "0.7", optional = true }
image = { version = "0.22", default-features = false, features = ["png_codec", "jpeg"] }
lyon = { version = "0.13", features = ["extra"], optional = true }
rand = { version = "0.6", features = ["stdweb"] }
serde = "1.0"
serde_derive = "1.0"
nalgebra = { version = "0.17", features = ["stdweb"], optional = true }
ncollide2d = { version = "0.18", optional = true }
immi = { version = "1.0", optional = true }
rusttype = { version = "0.7", optional = true }
serde_json = { version = "1.0", optional = true }
log = "0.4"

[dev-dependencies]
alga = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = { version = "1.0", optional = true }
gl = "0.11"
glutin = { version = "0.20", default-features = false }
rodio = { version = "0.8", optional = true }
env_logger = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4.20"
webgl_stdweb = "0.3"
base64 = "0.10"

# [target.'cfg(target_arch = "wasm32")'.dependencies.image]
# default-features = false
# version = "0.22"
# features = ["jpeg", "png_codec"]

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies.image]
# default-features = true
# version = "0.22"

[[example]]
name = "draw-geometry"
required-features = []

[[example]]
name = "image"
required-features = []

[[example]]
name = "font"
required-features = ["fonts"]

[[example]]
name = "sound"
required-features = ["sounds"]

[[example]]
name = "raycast"
required-features = ["collisions"]

[[example]]
name = "rgb-triangle"
required-features = []

[[example]]
name = "lyon"
required-features = ["complex_shapes"]

[[example]]
name = "shapes"
required-features = ["complex_shapes"]

[[example]]
name = "set-cursor"
required-features = []

[[example]]
name = "stopwatch"
required-features = []

[[example]]
name = "camera"
required-features = []

[[example]]
name = "immi"
required-features = ["immi_ui"]
